chore(asciidoc): fix mutation profile